--- a/Scripts/predictive/map/static/pagetransitions/css/component.css
+++ b/Scripts/predictive/map/static/pagetransitions/css/component.css
@@ -1,4 +1,3 @@
-html, body { height: 100%; }
 
 .pt-perspective {
 	position: absolute;
@@ -77,17 +76,17 @@ html, body { height: 100%; }
 }
 
 .pt-page-1 {
-	background: #fff;
+	background: #000000;
 }
 
 .pt-page-2 {
-	background-image: linear-gradient(#f8b195, #f67280);
+	background: #000000;
 }
 
 /* Triggers (menu and button) */
 
 .pt-triggers {
-	position: absolute;
+	position: relative;
 	width: 300px;
 	z-index: 999999;
 	top: 12%;
